// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FocusZone No Props No children 1`] = `
<RCTFocusZone
  navigateAtEnd="NavigateStopAtEnds"
/>
`;

exports[`FocusZone No Props One child 1`] = `
<RCTFocusZone
  navigateAtEnd="NavigateStopAtEnds"
/>
`;

exports[`FocusZone No Props Three children 1`] = `
<RCTFocusZone
  navigateAtEnd="NavigateStopAtEnds"
/>
`;

exports[`FocusZone No Props Two children 1`] = `
<RCTFocusZone
  navigateAtEnd="NavigateStopAtEnds"
/>
`;

exports[`FocusZone With Props All Props 1`] = `
<RCTFocusZone
  disabled={false}
  focusZoneDirection="vertical"
  navigateAtEnd="NavigateStopAtEnds"
  use2DNavigation={true}
/>
`;

exports[`FocusZone With Props defaultTabbableElement Prop 1`] = `
<RCTFocusZone
  navigateAtEnd="NavigateStopAtEnds"
/>
`;

exports[`FocusZone With Props disabled Prop 1`] = `
<RCTFocusZone
  disabled={true}
  navigateAtEnd="NavigateStopAtEnds"
/>
`;

exports[`FocusZone With Props focusZoneDirection Prop 1`] = `
<RCTFocusZone
  focusZoneDirection="bidirectional"
  navigateAtEnd="NavigateStopAtEnds"
/>
`;

exports[`FocusZone With Props isCircularNavigation Prop 1`] = `
<RCTFocusZone
  navigateAtEnd="NavigateWrap"
/>
`;

exports[`FocusZone With Props use2DNavigation Prop 1`] = `
<RCTFocusZone
  navigateAtEnd="NavigateStopAtEnds"
  use2DNavigation={true}
/>
`;
